--- a/Prim_Light_Optics.ipynb
+++ b/Prim_Light_Optics.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1yHDSBs5j7VdEsu-oQvoi11kQupCuUXNT",
+      "authorship_tag": "ABX9TyMrkLEuNLM40fcxD7S5WPyI",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/PrimWong/light_optics_grating_experiment/blob/main/Prim_Light_Optics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -36,7 +49,7 @@
         "id": "qXW7ZiPSsXDc",
         "outputId": "76529636-6929-4482-d206-ca44a50838de"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,7 +68,7 @@
       "metadata": {
         "id": "TYa1y_tqhVFO"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +115,7 @@
         "id": "x7iKuwRLouIa",
         "outputId": "cf1d4732-0467-4977-d2d8-f72f739249e1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +192,7 @@
         "id": "HFG1t5FZpHd9",
         "outputId": "a5d83809-818c-4b5d-d07e-640ac048b467"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +236,7 @@
         "id": "8yndjOXWrsgN",
         "outputId": "fd380b7d-213c-4574-ceea-8f23237c08bd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +298,7 @@
         "id": "90s5HjN4t9PE",
         "outputId": "1dbe9997-3b0e-4ed5-b3b6-acc287c5daaa"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
