--- a/Prim_Light_Optics.ipynb
+++ b/Prim_Light_Optics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1yHDSBs5j7VdEsu-oQvoi11kQupCuUXNT",
-      "authorship_tag": "ABX9TyMrkLEuNLM40fcxD7S5WPyI",
+      "authorship_tag": "ABX9TyPPsz62GxipBKD+FWIfC5g3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "id": "qXW7ZiPSsXDc",
         "outputId": "76529636-6929-4482-d206-ca44a50838de"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "TYa1y_tqhVFO"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         "id": "x7iKuwRLouIa",
         "outputId": "cf1d4732-0467-4977-d2d8-f72f739249e1"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
         "id": "HFG1t5FZpHd9",
         "outputId": "a5d83809-818c-4b5d-d07e-640ac048b467"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +236,7 @@
         "id": "8yndjOXWrsgN",
         "outputId": "fd380b7d-213c-4574-ceea-8f23237c08bd"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,6 +247,50 @@
           },
           "metadata": {},
           "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# First, we need to redefine 'w' as the width of the image. This was lost due to the stateless nature of the interaction.\n",
+        "# Re-open the image to get its width\n",
+        "with Image.open(\"/content/drive/MyDrive/Physic_data/processed_image/4555_0.jpg\") as img:\n",
+        "    w, h = img.size  # width and height of the image\n",
+        "\n",
+        "# The user has now provided the complete scale which is from 12.2 to 0 and then from 0 to 10.7.\n",
+        "# The total number of units across the width of the image is therefore 12.2 + 10.7.\n",
+        "total_scale_units_corrected = 12.2 + 10.7\n",
+        "\n",
+        "# The distance between the two '0' points is equal to the width of the image\n",
+        "distance_between_zeros_px_corrected = w\n",
+        "\n",
+        "# Calculate the pixel distance of one scale unit with the updated total scale units\n",
+        "scale_unit_px_corrected = distance_between_zeros_px_corrected / total_scale_units_corrected\n",
+        "\n",
+        "# Convert the pixel distances between white points into scale units with the corrected scale\n",
+        "distances_in_scale_units_corrected = [d / scale_unit_px_corrected for d in distances_between_points]\n",
+        "\n",
+        "distances_in_scale_units_corrected\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VIBpdJrB5sjd",
+        "outputId": "7d815d34-85e6-4bf2-b267-8bb26204a1ae"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4.264932885906039, 4.3648322147651]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     },
@@ -298,7 +342,7 @@
         "id": "90s5HjN4t9PE",
         "outputId": "1dbe9997-3b0e-4ed5-b3b6-acc287c5daaa"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,6 +353,77 @@
           },
           "metadata": {},
           "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "def calculate_wavelength(L, N):\n",
+        "    # Convert N from lines per inch to lines per meter (1 inch = 0.0254 meters)\n",
+        "    N_per_meter = N / 0.0254\n",
+        "\n",
+        "    # Calculate d as the reciprocal of N (in meters)\n",
+        "    d = 1 / N_per_meter\n",
+        "\n",
+        "    # Distances in units from previous calculations\n",
+        "    first_distance_units = distances_in_scale_units_corrected[0]\n",
+        "    second_distance_units = distances_in_scale_units_corrected[1]\n",
+        "\n",
+        "    # Calculate the angles using the inverse tangent function\n",
+        "    theta_1 = math.atan(first_distance_units / L)\n",
+        "    theta_2 = math.atan(second_distance_units / L)\n",
+        "\n",
+        "    # Convert the angles from radians to degrees\n",
+        "    theta_1_degrees = math.degrees(theta_1)\n",
+        "    theta_2_degrees = math.degrees(theta_2)\n",
+        "\n",
+        "    # Calculate theta_average in degrees\n",
+        "    theta_average_degrees = (theta_1_degrees + theta_2_degrees) / 2\n",
+        "\n",
+        "    # Convert theta_average to radians for calculation of sine\n",
+        "    theta_average_radians = math.radians(theta_average_degrees)\n",
+        "\n",
+        "    # Calculate sin(theta_average)\n",
+        "    sin_theta_average = math.sin(theta_average_radians)\n",
+        "\n",
+        "    # Calculate lambda using the formula lambda = d * sin(theta_average)\n",
+        "    lambda_value = d * sin_theta_average\n",
+        "\n",
+        "    # Convert lambda value from meters to nanometers (1 meter = 1e9 nanometers)\n",
+        "    lambda_value_nm = lambda_value * 1e9\n",
+        "\n",
+        "    return theta_average_degrees, sin_theta_average, lambda_value_nm\n",
+        "\n",
+        "L = float(input(\"Enter the value for L (distance in graph units, suggested value = 13): \"))\n",
+        "N = int(input(\"Enter the value for N (number of lines per inch in the grating, suggested value = 13400): \"))\n",
+        "\n",
+        "theta_avg, sin_theta_avg, lambda_nm = calculate_wavelength(L,N)\n",
+        "print(f\"Theta Average (Degrees): {theta_avg}\")\n",
+        "print(f\"Sin(Theta Average): {sin_theta_avg}\")\n",
+        "print(f\"Lambda (nm): {lambda_nm:.2f} nm\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mz28e1UU7FHy",
+        "outputId": "3530fc86-98a2-4460-e62a-4ee742856f66"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the value for L (distance in graph units, suggested value = 13): 13\n",
+            "Enter the value for N (number of lines per inch in the grating, suggested value = 13400): 13400\n",
+            "Theta Average (Degrees): 18.361502445758095\n",
+            "Sin(Theta Average): 0.31501140733960004\n",
+            "Lambda (nm): 597.11 nm\n"
+          ]
         }
       ]
     }
